# devtidy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
res/: icon.icns
src/: app.rs  cleaner.rs  constants.rs  main.rs  models.rs  scanner.rs  ui.rs
src/ai/: commands.rs  context.rs  mod.rs  ollama.rs  utils.rs
src/core/: app.rs  mod.rs
src/services/: cleaner.rs  mod.rs  scanner.rs
src/ui/: ui.rs
src/utils/: spinner.rs
