[package]
name = "dd"
version = "0.0.1"
edition = "2021"
authors = ["Nguyen Mau Minh <mauminh.nguyen@gmail.com>"]
description = "Clean development artifacts from your projects"
build = "build.rs"

[[bin]]
name = "dd"
path = "src/main.rs"

[dependencies]
ratatui = "0.26.3"
crossterm = "0.29.0"
walkdir = "2.4.0"
ignore = "0.4.22"
glob = "0.3.1"
clap = { version = "4.4.18", features = ["derive"] }
human_bytes = "0.4.3"
anyhow = "1.0.79"
log = "0.4.20"
env_logger = "0.11.1"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
once_cell = "1.19.0"
num_cpus = "1.16.0"
rustc_version_runtime = "0.3.0"
dirs = "6.0.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"
