[package]
name = "dd"
version = "1.0.0"
edition = "2021"
authors = ["Nguyen Mau Minh <mauminh.nguyen@gmail.com>"]
description = "Clean development artifacts from your projects"
build = "build.rs"

[[bin]]
name = "dd"
path = "src/main.rs"

[dependencies]
ratatui = "0.26.3"
crossterm = "0.29.0"
walkdir = "2.4.0"
ignore = "0.4.22"
glob = "0.3.1"
clap = { version = "4.4.18", features = ["derive", "color"] }
human_bytes = "0.4.3"
anyhow = "1.0.79"
log = "0.4.20"
env_logger = "0.11.1"
tokio = { version = "1.36.0", features = ["full"] }
async-trait = "0.1.77"
once_cell = "1.19.0"
num_cpus = "1.16.0"
rustc_version_runtime = "0.3.0"
dirs = "6.0.0"
sysinfo = "0.30.12"
# For cross-platform system command execution
which = "4.4.0"
reqwest = { version = "0.11.20", features = ["stream", "json"] }
futures-util = "0.3.28"
indicatif = "0.17.7"
console = "0.15.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.build-dependencies]
winres = "0.1.12"

[profile.release]
lto = true
